outputs/main/hsevo-qd_bpp_online_2025-08-15_03-18-18/problem_iter4_response2.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 32
    # If no bin can fit the item, return zero priorities for all bins
                                                                     ^
IndentationError: expected an indented block after 'if' statement on line 31
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/cyclomatic_complexity.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 32
    # If no bin can fit the item, return zero priorities for all bins
                                                                     ^
IndentationError: expected an indented block after 'if' statement on line 31
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/halstead.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 32
    # If no bin can fit the item, return zero priorities for all bins
                                                                     ^
IndentationError: expected an indented block after 'if' statement on line 31
